@@ -147,6 +147,71 @@
     </ev_shortname>
     <ev_driverval>1224 792</ev_driverval>
    </enum_val>
+   <enum_val id="ev/largeformat-PageSize-AnsiA">
+    <ev_longname>
+     <en>ANSI A</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>AnsiA</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>612 792</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/largeformat-PageSize-AnsiB">
+    <ev_longname>
+     <en>ANSI B</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>AnsiB</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>792 1224</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/largeformat-PageSize-AnsiC">
+    <ev_longname>
+     <en>ANSI C</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>AnsiC</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>1224 1584</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/largeformat-PageSize-AnsiD">
+    <ev_longname>
+     <en>ANSI D</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>AnsiD</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>1584 2448</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/largeformat-PageSize-AnsiE">
+    <ev_longname>
+     <en>ANSI E</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>AnsiE</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>2448 3168</ev_driverval>
+   </enum_val>
    <enum_val id="ev/largeformat-PageSize-SuperA">
     <ev_longname>
      <en>Super A</en>
