@@ -7,6 +7,8 @@
 	  500, 800, and 5000, marked HP DesignJet as working with the
 	  "chp2200" driver.
 
+	* opt/largeformat-PageSize.xml: Added ANSI paper sizes.
+
 2006-02-24  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/Epson-Stylus_CX3700.xml,
